# gitlab-mr-review

./: .env.example  .gitignore  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
cloud_functions/: README.md
cloud_functions/aws/: deploy.sh  lambda_function.py
cloud_functions/digitalocean/: __main__.py  build.sh  deploy.sh  project.yml  requirements.txt
cloud_functions/digitalocean/.deployed/: versions.json
cloud_functions/gcp/: deploy.sh  main.py  requirements.txt
gitlab/: ai-review-mr.yml
gitlab_mr_review/: __init__.py  ai_models.py  config.py  formatters.py  gitlab_client.py  main.py  metrics.py  requirements.txt
gitlab_mr_review/ai_adapters/: __init__.py  base.py  claude.py  gemini.py  openai.py
scripts/: delete_mr_comments.py  load_env.py  select_model.py  test_local.py
